# mini-kvstore-v2

./: .clippy.toml  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  JOURNEY.md  Makefile  README.md  auto_fix.sh  config.example.toml  docker-compose.yml  fix_ci.sh  run_benchmark.sh  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: kvstore_bench.rs
examples/: basic_usage.rs  compaction.rs  large_dataset.rs  persistence.rs  volume_usage.rs
src/: lib.rs  main.rs  store.rs  store_tests.rs
src/common/: file_utils.rs  schemas.rs
src/coord/: main.rs
src/coord/tests/: test_basic.rs
src/store/: compaction.rs  config.rs  engine.rs  error.rs  index.rs  mod.rs  record.rs  segment.rs  stats.rs
src/volume/: config.rs  handlers.rs  main.rs  mod.rs  server.rs  storage.rs
src/volume/tests/: test_basic.rs
tests/: store_integration.rs
tests/common/: mod.rs
