[package]
name = "mini-kvstore-v2"
version = "0.2.0"
edition = "2021"
authors = ["whispem"]
description = "mini-kvstore-v2 — segmented append-only KV store (learning project)"
license = "MIT"

[lib]
name = "mini_kvstore_v2"
path = "src/lib.rs"

[[bin]]
name = "mini-kvstore-v2"
path = "src/main.rs"

[[bin]]
name = "volume"
path = "src/volume/main.rs"

[[bench]]
name = "kvstore_bench"
harness = false

[dependencies]
crc32fast = "1.3"
thiserror = "1.0"
# Volume HTTP server dependencies
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"

[dev-dependencies]
criterion = "0.5"
anyhow = "1.0"
