[package]
name = "mini-kvstore-v2"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tower = { version = "0.5.2", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
anyhow = "1.0.100"
ciborium = "0.2"
ciborium-io = "0.2"
ciborium-ll = "0.2"
criterion = { version = "0.5.1", features = ["html_reports"] } 
walkdir = "2"
same-file = "1"
clap = { version = "4.5.53", features = ["derive"] }
clap_lex = "0.7.6"
clap_builder = "4.5.53"
tinytemplate = "1.2"
plotters = "0.3.7"
plotters-backend = "0.3.7"
plotters-svg = "0.3.7"
regex = "1.12.2"
regex-syntax = "0.8.8"
regex-automata = "0.4.13"
itertools = "0.10.5"
crossbeam-deque = "0.8.6"
crossbeam-utils = "0.8.21"
crossbeam-epoch = "0.9.18"
oorandom = "11.1.5"
half = "2.7.1"
zerocopy = "0.8.27"
zerocopy-derive = "0.8.27"
is-terminal = "0.4.17"
anes = "0.1.6"
anstyle = "1.0.13"
num-traits = "0.2.19"
rayon = "1.11.0"
rayon-core = "1.13.0"
either = "1.15.0"
cast = "0.3.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
serde_path_to_error = "0.1.20"
tokio-macros = "2.6.0"
async-trait = "0.1.89"
rustversion = "1.0.22"
percent-encoding = "2.3.2"
tracing = "0.1.41"
tracing-core = "0.1.34"
log = "0.4.28"
futures-core = "0.3.31"
futures-util = "0.3.31"
futures-channel = "0.3.31"
futures-task = "0.3.31"
sync_wrapper = "1.0.2"
httparse = "1.10.1"
mio = "1.1.0"
socket2 = "0.6.1"
matchit = "0.7.3"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
tower-layer = "0.3.3"
tower-service = "0.3.3"
hyper = "1.8.1"
hyper-util = "0.1.18"
memchr = "2.7.6"
ryu = "1.0.20"
pin-project-lite = "0.2.16"
pin-utils = "0.1.0"
quote = "1.0.42"
proc-macro2 = "1.0.103"
unicode-ident = "1.0.22"
once_cell = "1.21.3"
libc = "0.2.177"
form_urlencoded = "1.2.2"
mime = "0.3.17"
parking_lot_core = "0.9.12"
lock_api = "0.4.14"
scopeguard = "1.2.0"
cfg-if = "1.0.4"
signal-hook-registry = "1.4.6"
crc32fast = "1.5.0"
fnv = "1.0.7"
serde_derive = "1.0"
thiserror = "1.0.69"
thiserror-impl = "1.0.69"
smallvec = "1.15.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
