[package]
name = "mini-kvstore-v2"
version = "0.3.0"
edition = "2021"
authors = ["Em' <whispem@users.noreply.github.com>"]
description = "A segmented append-only key-value store with checksums, compaction, and HTTP API"
license = "MIT"
repository = "https://github.com/whispem/mini-kvstore-v2"
readme = "README.md"
keywords = ["kvstore", "storage", "database", "log-structured", "distributed"]
categories = ["database-implementations", "data-structures"]
rust-version = "1.75"

[dependencies]
# Error handling
thiserror = "1.0"

# Checksums
crc32fast = "1.4"

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full", "test-util"] }

[features]
# Feature for running heavy/resource-intensive tests
heavy-tests = []

[[bin]]
name = "mini-kvstore-v2"
path = "src/main.rs"

[[bin]]
name = "volume-server"
path = "src/volume/main.rs"

[[bench]]
name = "kvstore_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
